name:           vlprans-blog
version:        0.0.1.0
synopsis:       Personal blog
author:         Vlad Pranskevichus
category:       Web
build-type:     Simple
cabal-version:  >= 1.10
stability:      experimental

executable vlprans-blog
  hs-source-dirs:       src
  default-language:     Haskell2010
  main-is:              Site.hs
  build-depends:        base == 4.6.*,
                        hakyll == 4.3.*
